Add more styling

--- a/style.css
+++ b/style.css
@@ -20,3 +20,14 @@ body {
 	width: 510px;
 	border-bottom: solid 1px #3a3a3c;
 }
+
+.tile-container {
+	width: 330px;
+	margin-bottom: 30px;
+}
+
+.key-container {
+	width: 510px;
+	display: flex;
+	flex-wrap: wrap;
+}
