--- a/style.css
+++ b/style.css
@@ -79,6 +79,22 @@ body {
 	margin: 0;
 }
 
+.tile.flip {
+	animation: 0.5s linear flipping;
+}
+
+@keyframes flipping {
+	0% {
+		transform: rotateX(0deg);
+	}
+	50% {
+		transform: rotateX(90deg);
+	}
+	100% {
+		transform: rotateX(0deg);
+	}
+}
+
 .grey-overlay {
 	background-color: #3a3a3c !important;
 	border: none !important;
